final_falta_funcion_bucle_condicional/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement FINPARRAFO statements
Rule 2     statements -> expresion FINPARRAFO statements
Rule 3     statements -> <empty>
Rule 4     statements1 -> statement FINPARRAFO statements1
Rule 5     statements1 -> <empty>
Rule 6     statement -> asignacion
Rule 7     statement -> def_funcion
Rule 8     statement -> condicional
Rule 9     statement -> bucle
Rule 10    statement -> declaracion
Rule 11    statement -> declaracion_reg
Rule 12    statement -> declaracion_vec
Rule 13    statement -> <empty>
Rule 14    declaracion -> tipo NAME = expresion
Rule 15    declaracion -> tipo varios_name
Rule 16    varios_name -> NAME , varios_name
Rule 17    varios_name -> NAME
Rule 18    tipo -> ENTERO
Rule 19    tipo -> REAL
Rule 20    tipo -> BOOLEANO
Rule 21    tipo -> CARACTER
Rule 22    tipo -> NAME
Rule 23    declaracion_reg -> REGISTRO NAME { blq_registro }
Rule 24    blq_registro -> tipo varios_name ; FINPARRAFO blq_registro
Rule 25    blq_registro -> tipo varios_name ;
Rule 26    blq_registro -> VECTOR tipo_vector NAME [ NUMINTEGER ] ; FINPARRAFO blq_registro
Rule 27    blq_registro -> VECTOR tipo_vector NAME [ NUMINTEGER ] ;
Rule 28    tipo_vector -> ENTERO
Rule 29    tipo_vector -> REAL
Rule 30    tipo_vector -> BOOLEANO
Rule 31    tipo_vector -> CARACTER
Rule 32    declaracion_vec -> VECTOR tipo_vector NAME [ NUMINTEGER ]
Rule 33    asignacion -> name_chain = expresion
Rule 34    asignacion -> name_chain [ expresion ] = expresion
Rule 35    def_funcion -> FUNCION NAME ( lista_args ) : tipo FINPARRAFO { FINPARRAFO statements1 DEVOLVER expresion FINPARRAFO }
Rule 36    lista_args -> tipo NAME , lista_args
Rule 37    lista_args -> tipo NAME
Rule 38    lista_args -> <empty>
Rule 39    expresion -> expresion OR expresion_and
Rule 40    expresion -> expresion | expresion_and
Rule 41    expresion -> expresion_and
Rule 42    expresion_and -> expresion_and AND expresion_comp
Rule 43    expresion_and -> expresion_and & expresion_comp
Rule 44    expresion_and -> expresion_comp
Rule 45    expresion_comp -> expresion_comp OPCOMPARE expresion_add
Rule 46    expresion_comp -> expresion_add
Rule 47    expresion_add -> expresion_mult + expresion_add
Rule 48    expresion_add -> expresion_mult - expresion_add
Rule 49    expresion_add -> expresion_mult
Rule 50    expresion_mult -> expresion_mult * factor
Rule 51    expresion_mult -> expresion_mult / factor
Rule 52    expresion_mult -> factor
Rule 53    factor -> ( expresion )
Rule 54    factor -> valor
Rule 55    factor -> NAME ( lista_expresiones )
Rule 56    factor -> operador_unario factor
Rule 57    lista_expresiones -> expresion , lista_expresiones
Rule 58    lista_expresiones -> expresion
Rule 59    lista_expresiones -> <empty>
Rule 60    operador_unario -> -
Rule 61    operador_unario -> NOT
Rule 62    operador_unario -> !
Rule 63    operador_unario -> +
Rule 64    valor -> NUMREAL
Rule 65    valor -> NUMINTEGER
Rule 66    valor -> CIERTO
Rule 67    valor -> FALSO
Rule 68    valor -> CARACTERC
Rule 69    valor -> name_chain
Rule 70    valor -> name_chain [ expresion ]
Rule 71    valor -> name_chain . LONG
Rule 72    condicional -> SI expresion FINPARRAFO ENTONCES FINPARRAFO statements1 SINO FINPARRAFO statements1 FINSI
Rule 73    condicional -> SI expresion FINPARRAFO ENTONCES FINPARRAFO statements1 FINSI
Rule 74    bucle -> MIENTRAS expresion statements1 FINMIENTRAS
Rule 75    name_chain -> NAME
Rule 76    name_chain -> name_chain . NAME

Terminals, with rules where they appear

!                    : 62
&                    : 43
(                    : 35 53 55
)                    : 35 53 55
*                    : 50
+                    : 47 63
,                    : 16 36 57
-                    : 48 60
.                    : 71 76
/                    : 51
:                    : 35
;                    : 24 25 26 27
=                    : 14 33 34
AND                  : 42
BOOLEANO             : 20 30
CARACTER             : 21 31
CARACTERC            : 68
CIERTO               : 66
DEVOLVER             : 35
ENTERO               : 18 28
ENTONCES             : 72 73
FALSO                : 67
FINMIENTRAS          : 74
FINPARRAFO           : 1 2 4 24 26 35 35 35 72 72 72 73 73
FINSI                : 72 73
FUNCION              : 35
LONG                 : 71
MIENTRAS             : 74
NAME                 : 14 16 17 22 23 26 27 32 35 36 37 55 75 76
NOT                  : 61
NUMINTEGER           : 26 27 32 65
NUMREAL              : 64
OPCOMPARE            : 45
OR                   : 39
REAL                 : 19 29
REGISTRO             : 23
SI                   : 72 73
SINO                 : 72
VECTOR               : 26 27 32
[                    : 26 27 32 34 70
]                    : 26 27 32 34 70
error                : 
{                    : 23 35
|                    : 40
}                    : 23 35

Nonterminals, with rules where they appear

asignacion           : 6
blq_registro         : 23 24 26
bucle                : 9
condicional          : 8
declaracion          : 10
declaracion_reg      : 11
declaracion_vec      : 12
def_funcion          : 7
expresion            : 2 14 33 34 34 35 39 40 53 57 58 70 72 73 74
expresion_add        : 45 46 47 48
expresion_and        : 39 40 41 42 43
expresion_comp       : 42 43 44 45
expresion_mult       : 47 48 49 50 51
factor               : 50 51 52 56
lista_args           : 35 36
lista_expresiones    : 55 57
name_chain           : 33 34 69 70 71 76
operador_unario      : 56
statement            : 1 4
statements           : 1 2 0
statements1          : 4 35 72 72 73 74
tipo                 : 14 15 24 25 35 36 37
tipo_vector          : 26 27 32
valor                : 54
varios_name          : 15 16 24 25

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement FINPARRAFO statements
    (2) statements -> . expresion FINPARRAFO statements
    (3) statements -> .
    (6) statement -> . asignacion
    (7) statement -> . def_funcion
    (8) statement -> . condicional
    (9) statement -> . bucle
    (10) statement -> . declaracion
    (11) statement -> . declaracion_reg
    (12) statement -> . declaracion_vec
    (13) statement -> .
    (39) expresion -> . expresion OR expresion_and
    (40) expresion -> . expresion | expresion_and
    (41) expresion -> . expresion_and
    (33) asignacion -> . name_chain = expresion
    (34) asignacion -> . name_chain [ expresion ] = expresion
    (35) def_funcion -> . FUNCION NAME ( lista_args ) : tipo FINPARRAFO { FINPARRAFO statements1 DEVOLVER expresion FINPARRAFO }
    (72) condicional -> . SI expresion FINPARRAFO ENTONCES FINPARRAFO statements1 SINO FINPARRAFO statements1 FINSI
    (73) condicional -> . SI expresion FINPARRAFO ENTONCES FINPARRAFO statements1 FINSI
    (74) bucle -> . MIENTRAS expresion statements1 FINMIENTRAS
    (14) declaracion -> . tipo NAME = expresion
    (15) declaracion -> . tipo varios_name
    (23) declaracion_reg -> . REGISTRO NAME { blq_registro }
    (32) declaracion_vec -> . VECTOR tipo_vector NAME [ NUMINTEGER ]
    (42) expresion_and -> . expresion_and AND expresion_comp
    (43) expresion_and -> . expresion_and & expresion_comp
    (44) expresion_and -> . expresion_comp
    (75) name_chain -> . NAME
    (76) name_chain -> . name_chain . NAME
    (18) tipo -> . ENTERO
    (19) tipo -> . REAL
    (20) tipo -> . BOOLEANO
    (21) tipo -> . CARACTER
    (22) tipo -> . NAME
    (45) expresion_comp -> . expresion_comp OPCOMPARE expresion_add
    (46) expresion_comp -> . expresion_add
    (47) expresion_add -> . expresion_mult + expresion_add
    (48) expresion_add -> . expresion_mult - expresion_add
    (49) expresion_add -> . expresion_mult
    (50) expresion_mult -> . expresion_mult * factor
    (51) expresion_mult -> . expresion_mult / factor
    (52) expresion_mult -> . factor
    (53) factor -> . ( expresion )
    (54) factor -> . valor
    (55) factor -> . NAME ( lista_expresiones )
    (56) factor -> . operador_unario factor
    (64) valor -> . NUMREAL
    (65) valor -> . NUMINTEGER
    (66) valor -> . CIERTO
    (67) valor -> . FALSO
    (68) valor -> . CARACTERC
    (69) valor -> . name_chain
    (70) valor -> . name_chain [ expresion ]
    (71) valor -> . name_chain . LONG
    (60) operador_unario -> . -
    (61) operador_unario -> . NOT
    (62) operador_unario -> . !
    (63) operador_unario -> . +

    $end            reduce using rule 3 (statements -> .)
    FINPARRAFO      reduce using rule 13 (statement -> .)
    FUNCION         shift and go to state 13
    SI              shift and go to state 17
    MIENTRAS        shift and go to state 18
    REGISTRO        shift and go to state 19
    VECTOR          shift and go to state 20
    NAME            shift and go to state 14
    ENTERO          shift and go to state 23
    REAL            shift and go to state 24
    BOOLEANO        shift and go to state 25
    CARACTER        shift and go to state 26
    (               shift and go to state 15
    NUMREAL         shift and go to state 34
    NUMINTEGER      shift and go to state 21
    CIERTO          shift and go to state 35
    FALSO           shift and go to state 36
    CARACTERC       shift and go to state 37
    -               shift and go to state 30
    NOT             shift and go to state 38
    !               shift and go to state 39
    +               shift and go to state 29

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    expresion                      shift and go to state 3
    asignacion                     shift and go to state 4
    def_funcion                    shift and go to state 5
    condicional                    shift and go to state 6
    bucle                          shift and go to state 7
    declaracion                    shift and go to state 8
    declaracion_reg                shift and go to state 9
    declaracion_vec                shift and go to state 10
    expresion_and                  shift and go to state 11
    name_chain                     shift and go to state 12
    tipo                           shift and go to state 16
    expresion_comp                 shift and go to state 22
    expresion_add                  shift and go to state 27
    expresion_mult                 shift and go to state 28
    factor                         shift and go to state 31
    valor                          shift and go to state 32
    operador_unario                shift and go to state 33

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement . FINPARRAFO statements

    FINPARRAFO      shift and go to state 40


state 3

    (2) statements -> expresion . FINPARRAFO statements
    (39) expresion -> expresion . OR expresion_and
    (40) expresion -> expresion . | expresion_and

    FINPARRAFO      shift and go to state 41
    OR              shift and go to state 42
    |               shift and go to state 43


state 4

    (6) statement -> asignacion .

    FINPARRAFO      reduce using rule 6 (statement -> asignacion .)


state 5

    (7) statement -> def_funcion .

    FINPARRAFO      reduce using rule 7 (statement -> def_funcion .)


state 6

    (8) statement -> condicional .

    FINPARRAFO      reduce using rule 8 (statement -> condicional .)


state 7

    (9) statement -> bucle .

    FINPARRAFO      reduce using rule 9 (statement -> bucle .)


state 8

    (10) statement -> declaracion .

    FINPARRAFO      reduce using rule 10 (statement -> declaracion .)


state 9

    (11) statement -> declaracion_reg .

    FINPARRAFO      reduce using rule 11 (statement -> declaracion_reg .)


state 10

    (12) statement -> declaracion_vec .

    FINPARRAFO      reduce using rule 12 (statement -> declaracion_vec .)


state 11

    (41) expresion -> expresion_and .
    (42) expresion_and -> expresion_and . AND expresion_comp
    (43) expresion_and -> expresion_and . & expresion_comp

    FINPARRAFO      reduce using rule 41 (expresion -> expresion_and .)
    OR              reduce using rule 41 (expresion -> expresion_and .)
    |               reduce using rule 41 (expresion -> expresion_and .)
    )               reduce using rule 41 (expresion -> expresion_and .)
    FUNCION         reduce using rule 41 (expresion -> expresion_and .)
    SI              reduce using rule 41 (expresion -> expresion_and .)
    MIENTRAS        reduce using rule 41 (expresion -> expresion_and .)
    REGISTRO        reduce using rule 41 (expresion -> expresion_and .)
    VECTOR          reduce using rule 41 (expresion -> expresion_and .)
    NAME            reduce using rule 41 (expresion -> expresion_and .)
    ENTERO          reduce using rule 41 (expresion -> expresion_and .)
    REAL            reduce using rule 41 (expresion -> expresion_and .)
    BOOLEANO        reduce using rule 41 (expresion -> expresion_and .)
    CARACTER        reduce using rule 41 (expresion -> expresion_and .)
    FINMIENTRAS     reduce using rule 41 (expresion -> expresion_and .)
    ]               reduce using rule 41 (expresion -> expresion_and .)
    ,               reduce using rule 41 (expresion -> expresion_and .)
    AND             shift and go to state 44
    &               shift and go to state 45


state 12

    (33) asignacion -> name_chain . = expresion
    (34) asignacion -> name_chain . [ expresion ] = expresion
    (76) name_chain -> name_chain . . NAME
    (69) valor -> name_chain .
    (70) valor -> name_chain . [ expresion ]
    (71) valor -> name_chain . . LONG

    =               shift and go to state 46
    [               shift and go to state 47
    .               shift and go to state 48
    +               reduce using rule 69 (valor -> name_chain .)
    -               reduce using rule 69 (valor -> name_chain .)
    *               reduce using rule 69 (valor -> name_chain .)
    /               reduce using rule 69 (valor -> name_chain .)
    OPCOMPARE       reduce using rule 69 (valor -> name_chain .)
    AND             reduce using rule 69 (valor -> name_chain .)
    &               reduce using rule 69 (valor -> name_chain .)
    FINPARRAFO      reduce using rule 69 (valor -> name_chain .)
    OR              reduce using rule 69 (valor -> name_chain .)
    |               reduce using rule 69 (valor -> name_chain .)


state 13

    (35) def_funcion -> FUNCION . NAME ( lista_args ) : tipo FINPARRAFO { FINPARRAFO statements1 DEVOLVER expresion FINPARRAFO }

    NAME            shift and go to state 49


state 14

    (75) name_chain -> NAME .
    (22) tipo -> NAME .
    (55) factor -> NAME . ( lista_expresiones )

    =               reduce using rule 75 (name_chain -> NAME .)
    [               reduce using rule 75 (name_chain -> NAME .)
    .               reduce using rule 75 (name_chain -> NAME .)
    +               reduce using rule 75 (name_chain -> NAME .)
    -               reduce using rule 75 (name_chain -> NAME .)
    *               reduce using rule 75 (name_chain -> NAME .)
    /               reduce using rule 75 (name_chain -> NAME .)
    OPCOMPARE       reduce using rule 75 (name_chain -> NAME .)
    AND             reduce using rule 75 (name_chain -> NAME .)
    &               reduce using rule 75 (name_chain -> NAME .)
    FINPARRAFO      reduce using rule 75 (name_chain -> NAME .)
    OR              reduce using rule 75 (name_chain -> NAME .)
    |               reduce using rule 75 (name_chain -> NAME .)
    NAME            reduce using rule 22 (tipo -> NAME .)
    (               shift and go to state 50


state 15

    (53) factor -> ( . expresion )
    (39) expresion -> . expresion OR expresion_and
    (40) expresion -> . expresion | expresion_and
    (41) expresion -> . expresion_and
    (42) expresion_and -> . expresion_and AND expresion_comp
    (43) expresion_and -> . expresion_and & expresion_comp
    (44) expresion_and -> . expresion_comp
    (45) expresion_comp -> . expresion_comp OPCOMPARE expresion_add
    (46) expresion_comp -> . expresion_add
    (47) expresion_add -> . expresion_mult + expresion_add
    (48) expresion_add -> . expresion_mult - expresion_add
    (49) expresion_add -> . expresion_mult
    (50) expresion_mult -> . expresion_mult * factor
    (51) expresion_mult -> . expresion_mult / factor
    (52) expresion_mult -> . factor
    (53) factor -> . ( expresion )
    (54) factor -> . valor
    (55) factor -> . NAME ( lista_expresiones )
    (56) factor -> . operador_unario factor
    (64) valor -> . NUMREAL
    (65) valor -> . NUMINTEGER
    (66) valor -> . CIERTO
    (67) valor -> . FALSO
    (68) valor -> . CARACTERC
    (69) valor -> . name_chain
    (70) valor -> . name_chain [ expresion ]
    (71) valor -> . name_chain . LONG
    (60) operador_unario -> . -
    (61) operador_unario -> . NOT
    (62) operador_unario -> . !
    (63) operador_unario -> . +
    (75) name_chain -> . NAME
    (76) name_chain -> . name_chain . NAME

    (               shift and go to state 15
    NAME            shift and go to state 52
    NUMREAL         shift and go to state 34
    NUMINTEGER      shift and go to state 21
    CIERTO          shift and go to state 35
    FALSO           shift and go to state 36
    CARACTERC       shift and go to state 37
    -               shift and go to state 30
    NOT             shift and go to state 38
    !               shift and go to state 39
    +               shift and go to state 29

    expresion                      shift and go to state 51
    expresion_and                  shift and go to state 11
    expresion_comp                 shift and go to state 22
    expresion_add                  shift and go to state 27
    expresion_mult                 shift and go to state 28
    factor                         shift and go to state 31
    valor                          shift and go to state 32
    operador_unario                shift and go to state 33
    name_chain                     shift and go to state 53

state 16

    (14) declaracion -> tipo . NAME = expresion
    (15) declaracion -> tipo . varios_name
    (16) varios_name -> . NAME , varios_name
    (17) varios_name -> . NAME

    NAME            shift and go to state 54

    varios_name                    shift and go to state 55

state 17

    (72) condicional -> SI . expresion FINPARRAFO ENTONCES FINPARRAFO statements1 SINO FINPARRAFO statements1 FINSI
    (73) condicional -> SI . expresion FINPARRAFO ENTONCES FINPARRAFO statements1 FINSI
    (39) expresion -> . expresion OR expresion_and
    (40) expresion -> . expresion | expresion_and
    (41) expresion -> . expresion_and
    (42) expresion_and -> . expresion_and AND expresion_comp
    (43) expresion_and -> . expresion_and & expresion_comp
    (44) expresion_and -> . expresion_comp
    (45) expresion_comp -> . expresion_comp OPCOMPARE expresion_add
    (46) expresion_comp -> . expresion_add
    (47) expresion_add -> . expresion_mult + expresion_add
    (48) expresion_add -> . expresion_mult - expresion_add
    (49) expresion_add -> . expresion_mult
    (50) expresion_mult -> . expresion_mult * factor
    (51) expresion_mult -> . expresion_mult / factor
    (52) expresion_mult -> . factor
    (53) factor -> . ( expresion )
    (54) factor -> . valor
    (55) factor -> . NAME ( lista_expresiones )
    (56) factor -> . operador_unario factor
    (64) valor -> . NUMREAL
    (65) valor -> . NUMINTEGER
    (66) valor -> . CIERTO
    (67) valor -> . FALSO
    (68) valor -> . CARACTERC
    (69) valor -> . name_chain
    (70) valor -> . name_chain [ expresion ]
    (71) valor -> . name_chain . LONG
    (60) operador_unario -> . -
    (61) operador_unario -> . NOT
    (62) operador_unario -> . !
    (63) operador_unario -> . +
    (75) name_chain -> . NAME
    (76) name_chain -> . name_chain . NAME

    (               shift and go to state 15
    NAME            shift and go to state 52
    NUMREAL         shift and go to state 34
    NUMINTEGER      shift and go to state 21
    CIERTO          shift and go to state 35
    FALSO           shift and go to state 36
    CARACTERC       shift and go to state 37
    -               shift and go to state 30
    NOT             shift and go to state 38
    !               shift and go to state 39
    +               shift and go to state 29

    expresion                      shift and go to state 56
    expresion_and                  shift and go to state 11
    expresion_comp                 shift and go to state 22
    expresion_add                  shift and go to state 27
    expresion_mult                 shift and go to state 28
    factor                         shift and go to state 31
    valor                          shift and go to state 32
    operador_unario                shift and go to state 33
    name_chain                     shift and go to state 53

state 18

    (74) bucle -> MIENTRAS . expresion statements1 FINMIENTRAS
    (39) expresion -> . expresion OR expresion_and
    (40) expresion -> . expresion | expresion_and
    (41) expresion -> . expresion_and
    (42) expresion_and -> . expresion_and AND expresion_comp
    (43) expresion_and -> . expresion_and & expresion_comp
    (44) expresion_and -> . expresion_comp
    (45) expresion_comp -> . expresion_comp OPCOMPARE expresion_add
    (46) expresion_comp -> . expresion_add
    (47) expresion_add -> . expresion_mult + expresion_add
    (48) expresion_add -> . expresion_mult - expresion_add
    (49) expresion_add -> . expresion_mult
    (50) expresion_mult -> . expresion_mult * factor
    (51) expresion_mult -> . expresion_mult / factor
    (52) expresion_mult -> . factor
    (53) factor -> . ( expresion )
    (54) factor -> . valor
    (55) factor -> . NAME ( lista_expresiones )
    (56) factor -> . operador_unario factor
    (64) valor -> . NUMREAL
    (65) valor -> . NUMINTEGER
    (66) valor -> . CIERTO
    (67) valor -> . FALSO
    (68) valor -> . CARACTERC
    (69) valor -> . name_chain
    (70) valor -> . name_chain [ expresion ]
    (71) valor -> . name_chain . LONG
    (60) operador_unario -> . -
    (61) operador_unario -> . NOT
    (62) operador_unario -> . !
    (63) operador_unario -> . +
    (75) name_chain -> . NAME
    (76) name_chain -> . name_chain . NAME

    (               shift and go to state 15
    NAME            shift and go to state 52
    NUMREAL         shift and go to state 34
    NUMINTEGER      shift and go to state 21
    CIERTO          shift and go to state 35
    FALSO           shift and go to state 36
    CARACTERC       shift and go to state 37
    -               shift and go to state 30
    NOT             shift and go to state 38
    !               shift and go to state 39
    +               shift and go to state 29

    expresion                      shift and go to state 57
    expresion_and                  shift and go to state 11
    expresion_comp                 shift and go to state 22
    expresion_add                  shift and go to state 27
    expresion_mult                 shift and go to state 28
    factor                         shift and go to state 31
    valor                          shift and go to state 32
    operador_unario                shift and go to state 33
    name_chain                     shift and go to state 53

state 19

    (23) declaracion_reg -> REGISTRO . NAME { blq_registro }

    NAME            shift and go to state 58


state 20

    (32) declaracion_vec -> VECTOR . tipo_vector NAME [ NUMINTEGER ]
    (28) tipo_vector -> . ENTERO
    (29) tipo_vector -> . REAL
    (30) tipo_vector -> . BOOLEANO
    (31) tipo_vector -> . CARACTER

    ENTERO          shift and go to state 60
    REAL            shift and go to state 61
    BOOLEANO        shift and go to state 62
    CARACTER        shift and go to state 63

    tipo_vector                    shift and go to state 59

state 21

    (65) valor -> NUMINTEGER .

    +               reduce using rule 65 (valor -> NUMINTEGER .)
    -               reduce using rule 65 (valor -> NUMINTEGER .)
    *               reduce using rule 65 (valor -> NUMINTEGER .)
    /               reduce using rule 65 (valor -> NUMINTEGER .)
    OPCOMPARE       reduce using rule 65 (valor -> NUMINTEGER .)
    AND             reduce using rule 65 (valor -> NUMINTEGER .)
    &               reduce using rule 65 (valor -> NUMINTEGER .)
    FINPARRAFO      reduce using rule 65 (valor -> NUMINTEGER .)
    OR              reduce using rule 65 (valor -> NUMINTEGER .)
    |               reduce using rule 65 (valor -> NUMINTEGER .)
    )               reduce using rule 65 (valor -> NUMINTEGER .)
    FUNCION         reduce using rule 65 (valor -> NUMINTEGER .)
    SI              reduce using rule 65 (valor -> NUMINTEGER .)
    MIENTRAS        reduce using rule 65 (valor -> NUMINTEGER .)
    REGISTRO        reduce using rule 65 (valor -> NUMINTEGER .)
    VECTOR          reduce using rule 65 (valor -> NUMINTEGER .)
    NAME            reduce using rule 65 (valor -> NUMINTEGER .)
    ENTERO          reduce using rule 65 (valor -> NUMINTEGER .)
    REAL            reduce using rule 65 (valor -> NUMINTEGER .)
    BOOLEANO        reduce using rule 65 (valor -> NUMINTEGER .)
    CARACTER        reduce using rule 65 (valor -> NUMINTEGER .)
    FINMIENTRAS     reduce using rule 65 (valor -> NUMINTEGER .)
    ]               reduce using rule 65 (valor -> NUMINTEGER .)
    ,               reduce using rule 65 (valor -> NUMINTEGER .)


state 22

    (44) expresion_and -> expresion_comp .
    (45) expresion_comp -> expresion_comp . OPCOMPARE expresion_add

    AND             reduce using rule 44 (expresion_and -> expresion_comp .)
    &               reduce using rule 44 (expresion_and -> expresion_comp .)
    FINPARRAFO      reduce using rule 44 (expresion_and -> expresion_comp .)
    OR              reduce using rule 44 (expresion_and -> expresion_comp .)
    |               reduce using rule 44 (expresion_and -> expresion_comp .)
    )               reduce using rule 44 (expresion_and -> expresion_comp .)
    FUNCION         reduce using rule 44 (expresion_and -> expresion_comp .)
    SI              reduce using rule 44 (expresion_and -> expresion_comp .)
    MIENTRAS        reduce using rule 44 (expresion_and -> expresion_comp .)
    REGISTRO        reduce using rule 44 (expresion_and -> expresion_comp .)
    VECTOR          reduce using rule 44 (expresion_and -> expresion_comp .)
    NAME            reduce using rule 44 (expresion_and -> expresion_comp .)
    ENTERO          reduce using rule 44 (expresion_and -> expresion_comp .)
    REAL            reduce using rule 44 (expresion_and -> expresion_comp .)
    BOOLEANO        reduce using rule 44 (expresion_and -> expresion_comp .)
    CARACTER        reduce using rule 44 (expresion_and -> expresion_comp .)
    FINMIENTRAS     reduce using rule 44 (expresion_and -> expresion_comp .)
    ]               reduce using rule 44 (expresion_and -> expresion_comp .)
    ,               reduce using rule 44 (expresion_and -> expresion_comp .)
    OPCOMPARE       shift and go to state 64


state 23

    (18) tipo -> ENTERO .

    NAME            reduce using rule 18 (tipo -> ENTERO .)
    FINPARRAFO      reduce using rule 18 (tipo -> ENTERO .)


state 24

    (19) tipo -> REAL .

    NAME            reduce using rule 19 (tipo -> REAL .)
    FINPARRAFO      reduce using rule 19 (tipo -> REAL .)


state 25

    (20) tipo -> BOOLEANO .

    NAME            reduce using rule 20 (tipo -> BOOLEANO .)
    FINPARRAFO      reduce using rule 20 (tipo -> BOOLEANO .)


state 26

    (21) tipo -> CARACTER .

    NAME            reduce using rule 21 (tipo -> CARACTER .)
    FINPARRAFO      reduce using rule 21 (tipo -> CARACTER .)


state 27

    (46) expresion_comp -> expresion_add .

    OPCOMPARE       reduce using rule 46 (expresion_comp -> expresion_add .)
    AND             reduce using rule 46 (expresion_comp -> expresion_add .)
    &               reduce using rule 46 (expresion_comp -> expresion_add .)
    FINPARRAFO      reduce using rule 46 (expresion_comp -> expresion_add .)
    OR              reduce using rule 46 (expresion_comp -> expresion_add .)
    |               reduce using rule 46 (expresion_comp -> expresion_add .)
    )               reduce using rule 46 (expresion_comp -> expresion_add .)
    FUNCION         reduce using rule 46 (expresion_comp -> expresion_add .)
    SI              reduce using rule 46 (expresion_comp -> expresion_add .)
    MIENTRAS        reduce using rule 46 (expresion_comp -> expresion_add .)
    REGISTRO        reduce using rule 46 (expresion_comp -> expresion_add .)
    VECTOR          reduce using rule 46 (expresion_comp -> expresion_add .)
    NAME            reduce using rule 46 (expresion_comp -> expresion_add .)
    ENTERO          reduce using rule 46 (expresion_comp -> expresion_add .)
    REAL            reduce using rule 46 (expresion_comp -> expresion_add .)
    BOOLEANO        reduce using rule 46 (expresion_comp -> expresion_add .)
    CARACTER        reduce using rule 46 (expresion_comp -> expresion_add .)
    FINMIENTRAS     reduce using rule 46 (expresion_comp -> expresion_add .)
    ]               reduce using rule 46 (expresion_comp -> expresion_add .)
    ,               reduce using rule 46 (expresion_comp -> expresion_add .)


state 28

    (47) expresion_add -> expresion_mult . + expresion_add
    (48) expresion_add -> expresion_mult . - expresion_add
    (49) expresion_add -> expresion_mult .
    (50) expresion_mult -> expresion_mult . * factor
    (51) expresion_mult -> expresion_mult . / factor

    +               shift and go to state 65
    -               shift and go to state 66
    OPCOMPARE       reduce using rule 49 (expresion_add -> expresion_mult .)
    AND             reduce using rule 49 (expresion_add -> expresion_mult .)
    &               reduce using rule 49 (expresion_add -> expresion_mult .)
    FINPARRAFO      reduce using rule 49 (expresion_add -> expresion_mult .)
    OR              reduce using rule 49 (expresion_add -> expresion_mult .)
    |               reduce using rule 49 (expresion_add -> expresion_mult .)
    )               reduce using rule 49 (expresion_add -> expresion_mult .)
    FUNCION         reduce using rule 49 (expresion_add -> expresion_mult .)
    SI              reduce using rule 49 (expresion_add -> expresion_mult .)
    MIENTRAS        reduce using rule 49 (expresion_add -> expresion_mult .)
    REGISTRO        reduce using rule 49 (expresion_add -> expresion_mult .)
    VECTOR          reduce using rule 49 (expresion_add -> expresion_mult .)
    NAME            reduce using rule 49 (expresion_add -> expresion_mult .)
    ENTERO          reduce using rule 49 (expresion_add -> expresion_mult .)
    REAL            reduce using rule 49 (expresion_add -> expresion_mult .)
    BOOLEANO        reduce using rule 49 (expresion_add -> expresion_mult .)
    CARACTER        reduce using rule 49 (expresion_add -> expresion_mult .)
    FINMIENTRAS     reduce using rule 49 (expresion_add -> expresion_mult .)
    ]               reduce using rule 49 (expresion_add -> expresion_mult .)
    ,               reduce using rule 49 (expresion_add -> expresion_mult .)
    *               shift and go to state 67
    /               shift and go to state 68


state 29

    (63) operador_unario -> + .

    (               reduce using rule 63 (operador_unario -> + .)
    NAME            reduce using rule 63 (operador_unario -> + .)
    NUMREAL         reduce using rule 63 (operador_unario -> + .)
    NUMINTEGER      reduce using rule 63 (operador_unario -> + .)
    CIERTO          reduce using rule 63 (operador_unario -> + .)
    FALSO           reduce using rule 63 (operador_unario -> + .)
    CARACTERC       reduce using rule 63 (operador_unario -> + .)
    -               reduce using rule 63 (operador_unario -> + .)
    NOT             reduce using rule 63 (operador_unario -> + .)
    !               reduce using rule 63 (operador_unario -> + .)
    +               reduce using rule 63 (operador_unario -> + .)


state 30

    (60) operador_unario -> - .

    (               reduce using rule 60 (operador_unario -> - .)
    NAME            reduce using rule 60 (operador_unario -> - .)
    NUMREAL         reduce using rule 60 (operador_unario -> - .)
    NUMINTEGER      reduce using rule 60 (operador_unario -> - .)
    CIERTO          reduce using rule 60 (operador_unario -> - .)
    FALSO           reduce using rule 60 (operador_unario -> - .)
    CARACTERC       reduce using rule 60 (operador_unario -> - .)
    -               reduce using rule 60 (operador_unario -> - .)
    NOT             reduce using rule 60 (operador_unario -> - .)
    !               reduce using rule 60 (operador_unario -> - .)
    +               reduce using rule 60 (operador_unario -> - .)


state 31

    (52) expresion_mult -> factor .
